Mention blacklist when gpu compositing or raster is disabled.

R=kbr@chromium.org
BUG=600499

Review URL: https://codereview.chromium.org/1899693004

Cr-Commit-Position: refs/heads/master@{#389293}

Former-commit-id: e7b47c93b032d2f1be1001bf22f2ccaaf064db95